<resources>
    <string name="app_name">OwlCity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="location_array">
        <item>Kuala Lumpur</item>
        <item>Georgetown, Penang</item>
    </string-array>
    <string name="title_activity_club_info">ClubInfo</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_package">Package</string>
    <string name="packages">Package</string>
    <string name="payment">Payment</string>
    <string name="done">Done!</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="packageNa">Sorry, package unavailable. Please come back in a moment.</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_club_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reservation_detail">ReservationDetail</string>
    <string name="pick_you_date">Pick you date</string>
    <string name="date_selected">Date Selected:</string>
    <string name="date">DATE</string>
    <string name="proceed">Proceed</string>
    <string name="no_reservation">No Reservation</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="account_type">Account Type</string>
    <string name="account">Account</string>
    <string name="change_account_info">Change account info</string>
    <string name="user_id">User ID</string>
    <string name="id">ID</string>
    <string name="name2">NAME</string>
    <string name="email2">EMAIL</string>
    <string name="member">Member</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_no">Card No</string>
    <string name="cardno">CARDNO</string>
    <string name="cardname">CARDNAME</string>
    <string name="change_card_info">Change card info</string>
    <string name="payment_information">Payment Information</string>
    <string name="card_not_registered">Card Not Registered</string>
    <string name="add_card">Add Card</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign Up here!</string>
    <string name="enter_new">Enter new</string>
    <string name="enter_your_current_password">Enter your current password</string>
    <string name="submit">Submit</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="remove_this_card">Remove this card</string>
    <string name="save">Save</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reservation_id">RESERVATION ID</string>
    <string name="next">Next</string>
    <string name="about">About</string>
    <string name="operating_hour">Operating Hour</string>
    <string name="operatinghourtextview">OperatingHourTextView</string>
    <string name="contact">Contact</string>
    <string name="contacttextview">ContactTextView</string>
    <string name="address">Address</string>
    <string name="addresstextview">AddressTextView</string>
    <string name="package_info">package info</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="ccv">CCV</string>
    <string name="resevation_id">Resevation ID</string>
    <string name="club">Club</string>
    <string name="resevation_date">Resevation Date</string>
    <string name="package_details">Package Details</string>
    <string name="ready_for_every_party">Ready For Every Party</string>
    <string name="club_reservation">Club Reservation</string>
    <string name="my_reservation">My Reservation</string>
    <string name="where_am_i">Where Am I</string>
    <string name="join_us">Join Us</string>
    <string name="package_name">Package Name</string>
</resources>
