<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/profileImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnProfile"
            app:layout_constraintTop_toTopOf="parent"
            android:max="100"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnProfile"
            app:layout_constraintTop_toBottomOf="@+id/profileImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/reg_btn_style"
            android:layout_marginTop="20dp"
            android:text="@string/change_profile_picture"
            android:onClick="changePic"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line1"
            android:background="?android:attr/listDivider"
            android:layout_margin="10dp"

            app:layout_constraintTop_toBottomOf="@+id/btnProfile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout1"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/line1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/account"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/user_id"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userIdText"
                android:textColor="@android:color/black"
                android:text="@string/id"
                android:textSize="15sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:text="Name"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userNameText"
                android:textColor="@android:color/black"
                android:text="@string/name2"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:text="Email"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailText"
                android:text="@string/email2"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:text="@string/account_type"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeText"
                android:text="@string/member"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/changeProfileText"
                android:text="@string/change_account_info"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textEnd"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="updateProfile"
                android:focusable="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/line2"
            android:background="?android:attr/listDivider"
            android:layout_margin="10dp"

            app:layout_constraintTop_toBottomOf="@+id/layout1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout2"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:text="@string/payment_info"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:text="@string/card_no"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardNoText"
                android:text="@string/cardno"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:text="@string/card_holder_name"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cardNameText"
                android:text="@string/cardname"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/changePaymentText"
                android:text="@string/change_card_info"
                android:textColor="@color/colorPrimary"
                android:textAlignment="textEnd"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:onClick="updateCard"
                android:layout_marginBottom="20dp"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout3"
            android:orientation="vertical"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/line2"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:text="@string/payment_information"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:text="@string/card_not_registered"
                android:textSize="20sp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddCard"
                android:onClick="addCard"
                android:text="@string/add_card"
                android:background="@drawable/reg_btn_style"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>





    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>