<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.Payment"
    tools:showIn="@layout/activity_payment"
    android:background="#ffffff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/debit_card" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/package_info"
            android:padding="20dp"
            android:textColor="#000"
            android:id="@+id/info"
            />

        <EditText
            android:id="@+id/cardNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:inputType="number"
            android:padding="20dp"
            android:background="@drawable/reg_edittex_style"
            android:layout_margin="8dp"
            />

        <EditText
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_name"
            android:inputType="text"
            android:padding="20dp"
            android:background="@drawable/reg_edittex_style"
            android:layout_margin="8dp"
            />

        <EditText
            android:id="@+id/cardCcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ccv"
            android:inputType="number"
            android:padding="20dp"
            android:background="@drawable/reg_edittex_style"
            android:layout_margin="8dp"
            />

    </LinearLayout>




</ScrollView>